Styled search bar

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 			<div id = "nav_inner">
 				<div class ="navbar_links">
 					<ul>
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Notifications</a></li>
-						<li><a href="#">Discover</a></li>
-						<li><a href="#">Me</a></li>
+						<li><a href="#"><img class="icons" src="public/images/house.png">Home</a></li>
+						<li><a href="#"><img class="icons" src="public/images/bulb.png">Notifications</a></li>
+						<li><a href="#"><img class="icons" src="public/images/cloud.png">Discover</a></li>
+						<li><a href="#"><img class="icons" src="public/images/person.png">Me</a></li>
 					</ul>
 				</div>
 
@@ -22,8 +22,8 @@
 					<ul>	
 						<li><a href="#">Settings</a></li>
 						<li><a href="#">Message</a></li>
-						<li><a href="#">Search</a></li>
-						<li><a href="#">Logo</a></li>
+						<li><form><input type="text" placeholder="  search dat shit..."></form></li>
+						<li><a href="#"><img class="icons" id="twitter_icon" src="public/images/twitter.png"></a></li>
 					</ul>
 				</div>
 			</div>
