Added rest of the buttons to the bar

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 				<div class ="account_links">
 					<ul>	
-						<li><a href="#">Settings</a></li>
-						<li><a href="#">Message</a></li>
-						<li><form><input type="text" placeholder="  search dat shit..."></form></li>
+						<li><a href="#"><img class="icons" id="twitter_icon" src="public/images/settings.png"></a></li>
+						<li><a href="#"><img class="icons" id="twitter_icon" src="public/images/mail.png"></a></li>
+						<li><form><input type="text" placeholder="search dat shit..."></form></li>
 						<li><a href="#"><img class="icons" id="twitter_icon" src="public/images/twitter.png"></a></li>
 					</ul>
 				</div>
