Styled profiel stats

--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
 	
 				<div class='left'>
 					<div class='profile'>
+						<div class="avatar_background">
+						</div>
+						<div class="stats">
+							<table>
+								<tr class="profile_labels">
+									<td>TWEETS</td>
+									<td>FOLLOWING</td>
+									<td>FOLLOWERS</td>
+								<tr class="profile_data">
+									<td>2000</td>
+									<td>1</td>
+									<td>4000</td>
+								</tr>
+							</table>
+						</div>
+						<div class="compose_tweet">
+						</div>
 					</div>
 					<div class='recommendations'>
 					</div>
