Created basic tweet structure

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<div class="wrapper">
 			<div class="content">
 	
+	<! Left hand side -------------------------------------------- -->
 				<div class='left'>
 					<div class='profile'>
 						<div class="avatar_background">
@@ -72,16 +73,26 @@
 						</p>
 					</div>
 				</div>
-	
+
+	<! Right hand side ---------------------------------------------------->
 				<div class='right'>
 					<div class='twitter_feed'>
+						<div class="feed_header">
+							Tweets
+						</div>
 						<div class="tweet">
-							<div class="author"></div>
 							<div class="tweet_body">
 								<div class="tweet_left">
+									<div class="tweet_avatar">
+										<img src = "public/images/elvis.jpeg">
+									</div>
 								</div>
 								<div class="tweet_right">
-									<div class="tweet_action"></div>
+									<div class="tweet_content">
+										<h4>healthyElvis</h4>
+										<p>Can I go home now please?</p>
+										<p>I need beer</p>
+									</div>
 								</div>
 							</div>
 						</div>
