Styled tweet section

--- a/index.html
+++ b/index.html
@@ -38,10 +38,8 @@
 				<div class='left'>
 					<div class='profile'>
 						<div class="avatar_background">
-							<div id="avatar">
-								<img src = "public/images/elvis.jpeg">
-							</div>
-							<div id="handle">
+							<div class="avatar_content">
+								<div class='avatar_image'><img src = "public/images/elvis.jpeg"></div>
 								<p class="account_name">Elvis</p>
 								<p class="handle_id">@heatlhyElvis</p>
 							</div>
@@ -73,7 +71,6 @@
 						</p>
 					</div>
 				</div>
-
 	<! Right hand side ---------------------------------------------------->
 				<div class='right'>
 					<div class='twitter_feed'>
@@ -81,27 +78,36 @@
 							Tweets
 						</div>
 						<div class="tweet">
-							<div class="tweet_body">
-								<div class="tweet_left">
-									<div class="tweet_avatar">
-										<img src = "public/images/elvis.jpeg">
-									</div>
-								</div>
-								<div class="tweet_right">
-									<div class="tweet_content">
-										<h4>healthyElvis</h4>
-										<p>Can I go home now please?</p>
-										<p>I need beer</p>
+							<div class="tweet_avatar">
+								<img src = "public/images/elvis.jpeg">
+							</div>
+							<div class="tweet_right">
+								<div class="tweet_content">
+									<span class="tweet_username"><a href="#">healthyElvis</a></span>
+									<span class="tweet_handle">	@healthyElvis &#8226 </span><span class = "time"><a href="#">17m</a></span>
+									<p class="tweet_message">I saw a rabbit in my garden. It looked tasty. Anyone know how to catch a rabbit?</p>
+									<div class ="tweet_footer">
+										<ul class="expand">
+											<li><a href="#">Expand</a></li>
+										</ul>
+										<ul class="footer_action">
+											<li><a href="#"><i class="fa fa-ellipsis-h"></i> More</a></li>
+											<li><a href="#"><i class="fa fa-star"></i> Favourite</a></li>
+											<li><a href="#"><i class="fa fa-retweet"></i> Retweet</a></li>
+											<li><a href="#"><i class="fa fa-reply"></i> Reply</a></li>
+										</ul>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-	
+
 			</div>
 		</div>
 	</div>
+
+
 
 	<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
   	<script src="public/javascript/script.js"></script>
