Fixed profile module

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 						<div class="avatar_background">
 							<div class="avatar_content">
 								<div class='avatar_image'><img src = "public/images/elvis.jpeg"></div>
-								<p class="account_name">Elvis</p>
-								<p class="handle_id">@heatlhyElvis</p>
+								<div class="account_name">Elvis</div>
+								<div class="handle_id">@healthyElvis</div>
 							</div>
 						</div>
 						<div class="stats">
