Styled about box

--- a/index.html
+++ b/index.html
@@ -66,9 +66,21 @@
 					<div class='trending'>
 					</div>
 					<div class='about-twitter'>
-						<p>
-							"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali"
-						</p>
+						<ul>
+							<li><a href ="#">&#169; TobyTwit</a></li>
+							<li><a href ="#">About</a></li>
+							<li><a href ="#">Help</a></li>
+							<li><a href ="#">Terms</a></li>
+							<li><a href ="#">Privacy</a></li>
+							<li><a href ="#">Cookies</a></li>
+							<li><a href ="#">Ads</a></li>
+							<li><a href ="#">Blog</a></li>
+							<li><a href ="#">Status</a></li>
+							<li><a href ="#">Jobs</a></li>
+							<li><a href ="#">Media</a></li>
+							<li><a href ="#">Developers</a></li>
+							<li><a href ="#">Advertise</a></li>
+						</ul>
 					</div>
 				</div>
 	<! Right hand side ---------------------------------------------------->
