Added jquery to expand tweet input box on click

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							</table>
 						</div>
 						<div class="compose_tweet">
-							<form><input type="text" placeholder = "Compose new tweet.."></form>
+							<form><input id = "tweet_input" type="text" style="height: 30px;" placeholder = "Compose new tweet.."></form>
 						</div>
 					</div>
 					<div class='recommendations'>
@@ -88,6 +88,75 @@
 					<div class='twitter_feed'>
 						<div class="feed_header">
 							Tweets
+						</div>
+						<div class="tweet">
+							<div class="tweet_avatar">
+								<img src = "public/images/elvis.jpeg">
+							</div>
+							<div class="tweet_right">
+								<div class="tweet_content">
+									<span class="tweet_username"><a href="#">healthyElvis</a></span>
+									<span class="tweet_handle">	@healthyElvis &#8226 </span><span class = "time"><a href="#">17m</a></span>
+									<p class="tweet_message">I saw a rabbit in my garden. It looked tasty. Anyone know how to catch a rabbit?</p>
+									<div class ="tweet_footer">
+										<ul class="expand">
+											<li><a href="#">Expand</a></li>
+										</ul>
+										<ul class="footer_action">
+											<li><a href="#"><i class="fa fa-ellipsis-h"></i> More</a></li>
+											<li><a href="#"><i class="fa fa-star"></i> Favourite</a></li>
+											<li><a href="#"><i class="fa fa-retweet"></i> Retweet</a></li>
+											<li><a href="#"><i class="fa fa-reply"></i> Reply</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="tweet">
+							<div class="tweet_avatar">
+								<img src = "public/images/elvis.jpeg">
+							</div>
+							<div class="tweet_right">
+								<div class="tweet_content">
+									<span class="tweet_username"><a href="#">healthyElvis</a></span>
+									<span class="tweet_handle">	@healthyElvis &#8226 </span><span class = "time"><a href="#">17m</a></span>
+									<p class="tweet_message">I saw a rabbit in my garden. It looked tasty. Anyone know how to catch a rabbit?</p>
+									<div class ="tweet_footer">
+										<ul class="expand">
+											<li><a href="#">Expand</a></li>
+										</ul>
+										<ul class="footer_action">
+											<li><a href="#"><i class="fa fa-ellipsis-h"></i> More</a></li>
+											<li><a href="#"><i class="fa fa-star"></i> Favourite</a></li>
+											<li><a href="#"><i class="fa fa-retweet"></i> Retweet</a></li>
+											<li><a href="#"><i class="fa fa-reply"></i> Reply</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="tweet">
+							<div class="tweet_avatar">
+								<img src = "public/images/elvis.jpeg">
+							</div>
+							<div class="tweet_right">
+								<div class="tweet_content">
+									<span class="tweet_username"><a href="#">healthyElvis</a></span>
+									<span class="tweet_handle">	@healthyElvis &#8226 </span><span class = "time"><a href="#">17m</a></span>
+									<p class="tweet_message">I saw a rabbit in my garden. It looked tasty. Anyone know how to catch a rabbit?</p>
+									<div class ="tweet_footer">
+										<ul class="expand">
+											<li><a href="#">Expand</a></li>
+										</ul>
+										<ul class="footer_action">
+											<li><a href="#"><i class="fa fa-ellipsis-h"></i> More</a></li>
+											<li><a href="#"><i class="fa fa-star"></i> Favourite</a></li>
+											<li><a href="#"><i class="fa fa-retweet"></i> Retweet</a></li>
+											<li><a href="#"><i class="fa fa-reply"></i> Reply</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
 						</div>
 						<div class="tweet">
 							<div class="tweet_avatar">
