Added extra buttons in compose tweet expanded view

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<div class="avatar_content">
 								<div class='avatar_image'><img src = "public/images/elvis.jpeg"></div>
 								<div class="account_name">Elvis</div>
-								<div class="handle_id">@healthyElvis</div>
+								<div class="handle_id">@ElvisSandwich</div>
 							</div>
 						</div>
 						<div class="stats">
@@ -59,6 +59,12 @@
 						</div>
 						<div class="compose_tweet">
 							<form><input id = "tweet_input" type="text" style="height: 30px;" placeholder = "Compose new tweet.."></form>
+							<div class = "compose_extra_buttons">
+								<a href="#"><i class="fa fa-camera"></i></a>
+								<span><i class="fa fa-map-marker"></i></span>
+								<span class = "character_count">140</span>
+								<span class = "tweet_button">Tweet</span>
+							</div>
 						</div>
 					</div>
 					<div class='recommendations'>
@@ -95,9 +101,9 @@
 							</div>
 							<div class="tweet_right">
 								<div class="tweet_content">
-									<span class="tweet_username"><a href="#">healthyElvis</a></span>
-									<span class="tweet_handle">	@healthyElvis &#8226 </span><span class = "time"><a href="#">17m</a></span>
-									<p class="tweet_message">I saw a rabbit in my garden. It looked tasty. Anyone know how to catch a rabbit?</p>
+									<span class="tweet_username"><a href="#">Elvis</a></span>
+									<span class="tweet_handle">	@ElvisSandwich &#8226 </span><span class = "time"><a href="#">17m</a></span>
+									<p class="tweet_message">@RSPCA My rabbit trap failed. Any tips? </p>
 									<div class ="tweet_footer">
 										<ul class="expand">
 											<li><a href="#">Expand</a></li>
@@ -118,9 +124,9 @@
 							</div>
 							<div class="tweet_right">
 								<div class="tweet_content">
-									<span class="tweet_username"><a href="#">healthyElvis</a></span>
-									<span class="tweet_handle">	@healthyElvis &#8226 </span><span class = "time"><a href="#">17m</a></span>
-									<p class="tweet_message">I saw a rabbit in my garden. It looked tasty. Anyone know how to catch a rabbit?</p>
+									<span class="tweet_username"><a href="#">Elvis</a></span>
+									<span class="tweet_handle">	@ElvisSandwich &#8226 </span><span class = "time"><a href="#">16m</a></span>
+									<p class="tweet_message">Your face is gross. You eat white toast. #bestlyricseva #gwar</p>
 									<div class ="tweet_footer">
 										<ul class="expand">
 											<li><a href="#">Expand</a></li>
@@ -141,9 +147,9 @@
 							</div>
 							<div class="tweet_right">
 								<div class="tweet_content">
-									<span class="tweet_username"><a href="#">healthyElvis</a></span>
-									<span class="tweet_handle">	@healthyElvis &#8226 </span><span class = "time"><a href="#">17m</a></span>
-									<p class="tweet_message">I saw a rabbit in my garden. It looked tasty. Anyone know how to catch a rabbit?</p>
+									<span class="tweet_username"><a href="#">Elvis</a></span>
+									<span class="tweet_handle">	@ElvisSandwich &#8226 </span><span class = "time"><a href="#">15m</a></span>
+									<p class="tweet_message">Hey I'm free tonight if anyone wants a hot date. I'm not picky...</p>
 									<div class ="tweet_footer">
 										<ul class="expand">
 											<li><a href="#">Expand</a></li>
@@ -164,9 +170,9 @@
 							</div>
 							<div class="tweet_right">
 								<div class="tweet_content">
-									<span class="tweet_username"><a href="#">healthyElvis</a></span>
-									<span class="tweet_handle">	@healthyElvis &#8226 </span><span class = "time"><a href="#">17m</a></span>
-									<p class="tweet_message">I saw a rabbit in my garden. It looked tasty. Anyone know how to catch a rabbit?</p>
+									<span class="tweet_username"><a href="#">Elvis</a></span>
+									<span class="tweet_handle">	@ElvisSandwich &#8226 </span><span class = "time"><a href="#">9m</a></span>
+									<p class="tweet_message">I saw a rabbit in my garden. It looks tasty. Anyone know how to catch a rabbit?</p>
 									<div class ="tweet_footer">
 										<ul class="expand">
 											<li><a href="#">Expand</a></li>
