Added infinite scroll

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 								<a href="#"><i class="fa fa-camera"></i></a>
 								<span><i class="fa fa-map-marker"></i></span>
 								<span class = "character_count">140</span>
-								<span class = "tweet_button">Tweet</span>
+								<span class = "tweet_button">Tweet</a></span>
 							</div>
 						</div>
 					</div>
-					<div class='recommendations'>
+					<!-- <div class='recommendations'>
 					</div>
 					<div class='trending'>
-					</div>
+					</div> -->
 					<div class='about-twitter'>
 						<ul>
 							<li><a href ="#">&#169; TobyTwit</a></li>
@@ -173,6 +173,150 @@
 									<span class="tweet_username"><a href="#">Elvis</a></span>
 									<span class="tweet_handle">	@ElvisSandwich &#8226 </span><span class = "time"><a href="#">9m</a></span>
 									<p class="tweet_message">I saw a rabbit in my garden. It looks tasty. Anyone know how to catch a rabbit?</p>
+									<div class ="tweet_footer">
+										<ul class="expand">
+											<li><a href="#">Expand</a></li>
+										</ul>
+										<ul class="footer_action">
+											<li><a href="#"><i class="fa fa-ellipsis-h"></i> More</a></li>
+											<li><a href="#"><i class="fa fa-star"></i> Favourite</a></li>
+											<li><a href="#"><i class="fa fa-retweet"></i> Retweet</a></li>
+											<li><a href="#"><i class="fa fa-reply"></i> Reply</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="tweet">
+							<div class="tweet_avatar">
+								<img src = "public/images/elvis.jpeg">
+							</div>
+							<div class="tweet_right">
+								<div class="tweet_content">
+									<span class="tweet_username"><a href="#">Elvis</a></span>
+									<span class="tweet_handle">	@ElvisSandwich &#8226 </span><span class = "time"><a href="#">9m</a></span>
+									<p class="tweet_message">I saw a rabbit in my garden. It looks tasty. Anyone know how to catch a rabbit?</p>
+									<div class ="tweet_footer">
+										<ul class="expand">
+											<li><a href="#">Expand</a></li>
+										</ul>
+										<ul class="footer_action">
+											<li><a href="#"><i class="fa fa-ellipsis-h"></i> More</a></li>
+											<li><a href="#"><i class="fa fa-star"></i> Favourite</a></li>
+											<li><a href="#"><i class="fa fa-retweet"></i> Retweet</a></li>
+											<li><a href="#"><i class="fa fa-reply"></i> Reply</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="tweet">
+							<div class="tweet_avatar">
+								<img src = "public/images/elvis.jpeg">
+							</div>
+							<div class="tweet_right">
+								<div class="tweet_content">
+									<span class="tweet_username"><a href="#">Elvis</a></span>
+									<span class="tweet_handle">	@ElvisSandwich &#8226 </span><span class = "time"><a href="#">9m</a></span>
+									<p class="tweet_message">I saw a rabbit in my garden. It looks tasty. Anyone know how to catch a rabbit?</p>
+									<div class ="tweet_footer">
+										<ul class="expand">
+											<li><a href="#">Expand</a></li>
+										</ul>
+										<ul class="footer_action">
+											<li><a href="#"><i class="fa fa-ellipsis-h"></i> More</a></li>
+											<li><a href="#"><i class="fa fa-star"></i> Favourite</a></li>
+											<li><a href="#"><i class="fa fa-retweet"></i> Retweet</a></li>
+											<li><a href="#"><i class="fa fa-reply"></i> Reply</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="tweet">
+							<div class="tweet_avatar">
+								<img src = "public/images/elvis.jpeg">
+							</div>
+							<div class="tweet_right">
+								<div class="tweet_content">
+									<span class="tweet_username"><a href="#">Elvis</a></span>
+									<span class="tweet_handle">	@ElvisSandwich &#8226 </span><span class = "time"><a href="#">9m</a></span>
+									<p class="tweet_message">I saw a rabbit in my garden. It looks tasty. Anyone know how to catch a rabbit?</p>
+									<div class ="tweet_footer">
+										<ul class="expand">
+											<li><a href="#">Expand</a></li>
+										</ul>
+										<ul class="footer_action">
+											<li><a href="#"><i class="fa fa-ellipsis-h"></i> More</a></li>
+											<li><a href="#"><i class="fa fa-star"></i> Favourite</a></li>
+											<li><a href="#"><i class="fa fa-retweet"></i> Retweet</a></li>
+											<li><a href="#"><i class="fa fa-reply"></i> Reply</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="loader">
+							<div>
+								<img class ="spinner" src="public/images/spinnerLarge.gif">
+							</div>
+						</div>
+						<div class="hidden_tweet">
+							<div class="tweet_avatar">
+								<div>
+								<img src = "public/images/elvis.jpeg">
+							</div>
+							<div class="tweet_right">
+								<div class="tweet_content">
+									<span class="tweet_username"><a href="#">Elvis</a></span>
+									<span class="tweet_handle">	@ElvisSandwich &#8226 </span><span class = "time"><a href="#">9m</a></span>
+									<p class="tweet_message">Hidden tweet appearing...Aaaaaaaaaaaaaaaaaaarrrrrggghhhhhh!!!!!</p>
+									<div class ="tweet_footer">
+										<ul class="expand">
+											<li><a href="#">Expand</a></li>
+										</ul>
+										<ul class="footer_action">
+											<li><a href="#"><i class="fa fa-ellipsis-h"></i> More</a></li>
+											<li><a href="#"><i class="fa fa-star"></i> Favourite</a></li>
+											<li><a href="#"><i class="fa fa-retweet"></i> Retweet</a></li>
+											<li><a href="#"><i class="fa fa-reply"></i> Reply</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="hidden_tweet">
+							<div class="tweet_avatar">
+								<img src = "public/images/elvis.jpeg">
+							</div>
+							<div class="tweet_right">
+								<div class="tweet_content">
+									<span class="tweet_username"><a href="#">Elvis</a></span>
+									<span class="tweet_handle">	@ElvisSandwich &#8226 </span><span class = "time"><a href="#">9m</a></span>
+									<p class="tweet_message">Hiddentweet appearing. Aaaaaaaaaaaaaaaaaaarrrrrggghhhhhh!!!!!</p>
+									<div class ="tweet_footer">
+										<ul class="expand">
+											<li><a href="#">Expand</a></li>
+										</ul>
+										<ul class="footer_action">
+											<li><a href="#"><i class="fa fa-ellipsis-h"></i> More</a></li>
+											<li><a href="#"><i class="fa fa-star"></i> Favourite</a></li>
+											<li><a href="#"><i class="fa fa-retweet"></i> Retweet</a></li>
+											<li><a href="#"><i class="fa fa-reply"></i> Reply</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="hidden_tweet">
+							<div class="tweet_avatar">
+								<img src = "public/images/elvis.jpeg">
+							</div>
+							<div class="tweet_right">
+								<div class="tweet_content">
+									<span class="tweet_username"><a href="#">Elvis</a></span>
+									<span class="tweet_handle">	@ElvisSandwich &#8226 </span><span class = "time"><a href="#">9m</a></span>
+									<p class="tweet_message">Hiddentweet appearing. Aaaaaaaaaaaaaaaaaaarrrrrggghhhhhh!!!!!</p>
 									<div class ="tweet_footer">
 										<ul class="expand">
 											<li><a href="#">Expand</a></li>
